Add GET workspace repair endpoint
