# core/src/main/scala/org/broadinstitute/dsde/rawls/model/RepairWorkspaceResponse.scala
@@ -1,0 +1,6 @@
+package org.broadinstitute.dsde.rawls.model
+
+case class RepairWorkspaceResponse(
+  googleProjectId: String,
+  status: String
+)
