# core/src/main/scala/org/broadinstitute/dsde/rawls/resourcebuffer/ResourceBufferServiceImpl.scala
@@ -1,11 +1,12 @@
 package org.broadinstitute.dsde.rawls.resourcebuffer
 
-import bio.terra.buffer.model.JobModel
+import bio.terra.buffer.model.{JobModel, SqlSortDirectionDescDefault}
 import org.broadinstitute.dsde.rawls.config.ResourceBufferConfig
 import org.broadinstitute.dsde.rawls.dataaccess.resourcebuffer.ResourceBufferDAO
 import org.broadinstitute.dsde.rawls.model.ProjectPoolType.ProjectPoolType
 import org.broadinstitute.dsde.rawls.model.{GoogleProjectId, ProjectPoolId, ProjectPoolType}
 
+import scala.collection.convert.ImplicitConversions.`collection AsScalaIterable`
 import scala.concurrent.{ExecutionContext, Future}
 
 object ResourceBufferServiceImpl {
@@ -37,5 +38,24 @@ class ResourceBufferServiceImpl(resourceBufferDAO: ResourceBufferDAO, config: Re
 
   def repairGoogleProject(googleProjectId: String): Future[JobModel] =
     resourceBufferDAO.repairResource(googleProjectId)
+
+  def getRepairGoogleProjectStatus(googleProjectId: String): Future[JobModel] = {
+    getRepairGoogleProjectJob(googleProjectId).flatMap {
+      case Some(job) => resourceBufferDAO.getJob(job.getId)
+      case None => Future.failed(new Exception(s"No repair job found for project $googleProjectId"))
+    }
+  }
+
+  def getRepairGoogleProjectJob(googleProjectId: String): Future[Option[JobModel]] = {
+    resourceBufferDAO.enumerateJobs(
+      0, 10, SqlSortDirectionDescDefault.DESC,
+      "bio.terra.buffer.service.resource.flight.GoogleProjectRepairFlight",
+      java.util.List.of("googleProjectId=" + googleProjectId)
+    ).map(_.headOption)
+  }
+
+  def getJobDetails(jobId: String): Future[Object] = {
+    resourceBufferDAO.getJobResult(jobId)
+  }
 
 }
